--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [build-system]
-requires = ["setuptools >= 61.0.0"]
-build-backend = "setuptools.build_meta"
+requires = ["poetry-core"]
+build-backend = "poetry.core.masonry.api"
 
-[project]
+[tool.poetry]
 name = "crazy-rl"
-description="Environments and learning code for doing (MOMA)RL with CrazyFlies."
+version = "0.0.1"
+description = "Environments and learning code for doing (MOMA)RL with CrazyFlies."
+authors = ["Florian Felten <florian.felten@uni.lu>"]
+license = "MIT"
 readme = "README.md"
-requires-python = ">= 3.8"
-authors = [{ name = "Florian Felten & Pierre-Yves Houitte", email = "florian.felten@uni.lu" }]
-license = { text = "MIT License" }
 keywords = ["Reinforcement Learning", "Multi-Objective", "Multi-Agent", "RL", "AI", "gymnasium", "pettingzoo"]
 classifiers = [
     "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
@@ -20,34 +20,25 @@ classifiers = [
     'Intended Audience :: Science/Research',
     'Topic :: Scientific/Engineering :: Artificial Intelligence',
 ]
-dependencies = [
-    "gymnasium >=0.27",
-    "pettingzoo >=1.22.3",
-    "numpy >=1.21.0",
-    "torch >=1.11.0",
-    "pygame >=2.1.0",
-    "cflib",
-    "wandb",
-    "seaborn",
-    "tensorboard",
-]
-dynamic = ["version"]
 
-[project.optional-dependencies]
-# Update dependencies in `all` if any are added or removed
-# OLS requires pycddlib and libgmp to be installed, which does not work on MacOS for now.
+[tool.poetry.dependencies]
+python = "^3.8, <3.12"
+gymnasium = "^0.27"
+pettingzoo = "^1.22.3"
+numpy = "^1.21.0"
+torch = "^1.11.0, <2.0.0"
+pygame = "^2.1.0"
+pyopengl = "^3.1.5"
+cflib = "*"
+wandb = "*"
+seaborn = "*"
+tensorboard = "*"
 
-all = []
-testing = ["pytest ==7.1.3"]
+[tool.poetry.group.dev.dependencies]
+pre-commit = "^2.6"
 
-[tool.setuptools]
-include-package-data = true
-
-[tool.setuptools.packages.find]
-include = ["crazy_rl", "crazy_rl.*"]
-
-[tool.setuptools.package-data]
-crazy_rl = ["*.json", "assets/*"]
+[tool.poetry.group.testing.dependencies]
+pytest = "^7.1.3"
 
 # Linting, testing, ... ########################################################
 [tool.black]
