--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,16 +12,18 @@ jobs:
     strategy:
       matrix:
         python-version: ['3.10']
+        poetry-version: ['1.3']
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Install dependencies
-      run: |
-        pip install pytest
-        pip install -e .[all]
-    - name: Full Python tests
-      run: |
-        pytest tests/test_algos.py
+    - name: Run image
+      uses: abatilo/actions-poetry@v2.0.0
+      with:
+        poetry-version: ${{ matrix.poetry-version }}
+    - name: Install core dependencies
+      run: poetry install -E pytest
+    - name: Run tuner tests
+      run: poetry run pytest
