--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,8 +37,8 @@ tensorboard = "*"
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.6"
 
-[tool.poetry.group.testing.dependencies]
-pytest = "^7.1.3"
+[tool.poetry.extras]
+pytest = ["pytest"]
 
 # Linting, testing, ... ########################################################
 [tool.black]
