--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ cflib = "*"
 wandb = "*"
 seaborn = "*"
 tensorboard = "*"
+pytest = {version = "^7.1.3", optional = true}
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.6"
