--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,12 +28,15 @@ pettingzoo = "^1.22.3"
 numpy = "^1.21.0"
 torch = "^1.11.0, <2.0.0"
 pygame = "^2.1.0"
-pyopengl = "^3.1.5"
+pyopengl = "^3.1.6"
 cflib = "*"
-wandb = "*"
-seaborn = "*"
-tensorboard = "*"
 pytest = {version = "^7.1.3", optional = true}
+jax = "^0.4.7"
+flax = "^0.6.9"
+optax = "^0.1.3"
+orbax-checkpoint = "*"
+jaxlib = "*"
+distrax = "^0.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.6"
