added jax_dataclasses to pyproject.toml

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ optax = "^0.1.3"
 orbax-checkpoint = "*"
 jaxlib = "*"
 distrax = "^0.1.2"
+jax_dataclasses = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.6"
