--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ pettingzoo = "^1.23.1"
 numpy = "^1.21.0"
 torch = "^1.11.0, <2.0.0"
 pygame = "^2.1.0"
-pyopengl = "^3.1.6"
+pyopengl = "3.1.6"
 cflib = "*"
 pytest = "^7.1.3"
 jax = "^0.4.7"
