--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,7 +22,7 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.8, <3.12"
+python = "^3.9, <3.12"
 gymnasium = "^0.28"
 pettingzoo = "^1.23.1"
 numpy = "^1.21.0"
@@ -31,11 +31,12 @@ pygame = "^2.1.0"
 pyopengl = "3.1.6"
 cflib = "*"
 pytest = "^7.1.3"
-jax = "^0.4.7"
+jax = {version="^0.4.14"}
 flax = "^0.6.9"
 optax = "^0.1.3"
 orbax-checkpoint = "*"
 jaxlib = "*"
+matplotlib = "*"
 distrax = "^0.1.2"
 jax_dataclasses = "^1.5.1"
 
