--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,7 +41,7 @@ distrax = "^0.1.2"
 jax_dataclasses = "^1.5.1"
 
 [tool.poetry.group.dev.dependencies]
-pre-commit = "^2.6"
+pre-commit = "^2.20"
 
 [tool.poetry.extras]
 pytest = ["pytest"]
@@ -50,7 +50,7 @@ pytest = ["pytest"]
 [tool.black]
 safe = true
 line-length = 127
-target-version = ['py37', 'py38', 'py39', 'py310']
+target-version = ['py39', 'py310', 'py311']
 include = '\.pyi?$'
 
 [tool.isort]
