--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,21 +24,21 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.9, <3.12"
 gymnasium = "^0.28"
-pettingzoo = "^1.23.1"
-numpy = "^1.21.0"
-torch = "^1.11.0, <2.0.0"
-pygame = "^2.1.0"
-pyopengl = "3.1.6"
-cflib = "*"
-pytest = "^7.1.3"
-jax = {version="^0.4.14"}
-flax = "^0.6.9"
-optax = "^0.1.3"
-orbax-checkpoint = "*"
-jaxlib = "*"
-matplotlib = "*"
-distrax = "^0.1.2"
-jax_dataclasses = "^1.5.1"
+pettingzoo = "^1.23"
+numpy = "*"
+torch = "^1.13, <2.0.0"
+pygame = "^2.5"
+pyopengl = "^3.1"
+cflib = "^0.1"
+pytest = "^7.1"
+jax = {version="^0.4"}
+jaxlib = "^0.4"
+flax = "^0.6"
+optax = "^0.1"
+orbax-checkpoint = "^0.3"
+matplotlib = "^3.7"
+distrax = "^0.1"
+jax_dataclasses = "^1.5"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20"
