--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ jax = {version="^0.4"}
 jaxlib = "^0.4"
 flax = "^0.6"
 optax = "^0.1"
+chex = "^0.1"
 orbax-checkpoint = "^0.3"
 matplotlib = "^3.7"
 distrax = "^0.1"
