--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ orbax-checkpoint = "^0.3"
 matplotlib = "^3.7"
 distrax = "^0.1"
 jax_dataclasses = "^1.5"
+pymoo = "^0.6"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20"
