--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ matplotlib = "^3.7"
 distrax = "^0.1"
 jax_dataclasses = "^1.5"
 pymoo = "^0.6"
+mplcursors = "^0.5.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20"
