--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,8 @@ pymoo = "^0.6"
 mplcursors = "^0.5.2"
 supersuit = "^3.9.0"
 tqdm = "^4.66.1"
+pandas = "^2.0.3"
+expt = "^0.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^2.20"
