--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,31 @@ dmypy.json
 .idea/
 #trained_model/
 **.DS_Store
+
+# Unity
+[Ll]ibrary/
+[Tt]emp/
+[Oo]bj/
+[Bb]uild/
+[Bb]uilds/
+Logs/
+UserSettings/
+
+Assets/AssetStoreTools*
+
+# Visual Studio cache directory
+.vs/
+
+# Unity3D generated meta files
+*.pidb.meta
+*.pdb.meta
+
+# Unity3D Generated File On Crash Reports
+sysinfo.txt
+
+# Builds
+*.apk
+*.unitypackage
+
+# Crashlytics generated file
+Assets/StreamingAssets/crashlytics-build.properties
